# lib/types/index.ts
@@ -15,6 +15,7 @@ export type DeepPartial<T> = {
  * Next.js dynamic route parameters.
  */
 export type Params = Promise<{slug: string}>
+export type UserParams = Promise<{username: string}>
 export type SearchParams = Promise<{
   [key: string]: string | string[] | undefined
 }>
